Bug 46552 - UI: Preview for Bullets/Numbering Configuration incorrect
Summary: UI: Preview for Bullets/Numbering Configuration incorrect
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Vidhey PV
URL:
Whiteboard: BSA, difficultyBeginner, easyHack, sk...
Keywords:
Depends on:
Blocks:
 
Reported: 2012-02-23 18:47 UTC by Jon Grossart
Modified: 2017-01-13 17:12 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
screenshot, where selected level 2 and bullet not seen for level 3 (115.72 KB, image/png)
2012-05-23 22:35 UTC, sasha.libreoffice
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jon Grossart 2012-02-23 18:47:22 UTC
Problem description:  The preview window for modifying the List styles does not update correctly. for levels 4+. It might also help to show non-printing characters in the preview, regardless of how that option is set for the document.

Steps to reproduce:
1. modify a list style
2. click through the list style levels
3. watch preview window

Current behavior: It sometimes works correctly for levels 1-3.  Starting with level 4, once you click on it, the symbol for level 5 disappears (same for level 5 with 6 disappearing, etc.). Also, the indenting also seems have issues if you make a combo numbering to bullet list (lower level being bulleted).

Expected behavior: The preview would look correct for all levels

Platform (if different from the browser): 
              
Browser: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:10.0.2) Gecko/20100101 Firefox/10.0.2
Comment 1 sasha.libreoffice 2012-05-23 09:10:18 UTC
Thanks for bugreport
Bug still reproducible?
Comment 2 Jon Grossart 2012-05-23 15:39:48 UTC
Yes, this happens still in Windows and Ubuntu (3.5.3)

Not a big problem, just shows a lack of polish and small annoyance.
Comment 3 sasha.libreoffice 2012-05-23 22:31:05 UTC
Thanks for additional testing
Reproduced in 3.3.4 and 3.5.3 on Fedora 64 bit
Bug works so: when we select some level, bullet not shown on level beneath of it. For example, if we select level 2, then bullet not shown on level 3. If we select l variant 1-10, then on bullet shown only on level 1.

In Impress problem the same
Comment 4 sasha.libreoffice 2012-05-23 22:35:37 UTC
Created attachment 62049 [details]
screenshot, where selected level 2 and bullet not seen for level 3
Comment 5 Jon Grossart 2012-05-24 09:22:24 UTC
There are also other random visual glitches. Depending on which level you pick, the indents and what part of the bullets/numbering is shown will switch around (i.e. sometimes the level below, sometimes above).
Comment 6 tommy27 2014-10-26 05:39:15 UTC
is the bug still there in LibO 4.3.2.2?
Comment 7 sasha.libreoffice 2014-10-29 10:05:46 UTC
reproduced bug in 4.3.1 on WinXP
Comment 8 Jon Grossart 2014-12-07 23:44:34 UTC
Still present in 4.3.4.1 as well.

Still messing up the n+1 level. Showing 1-10 also doesn't work at all.
Comment 9 QA Administrators 2015-12-20 16:17:43 UTC Comment hidden (obsolete)
Comment 10 Jon Grossart 2015-12-20 22:36:31 UTC
Still present in 5.0.4 (64-bit LibO, Win10 64-bit).

Checked LibO 3.3.0, present as well so changing version to inherited.
Comment 11 QA Administrators 2017-01-03 19:55:29 UTC Comment hidden (obsolete)
Comment 12 Jon Grossart 2017-01-04 02:23:58 UTC
Still present in 5.2.4 x64, Windows 10 64-bit.
Comment 13 Tamás Zolnai 2017-01-05 04:55:33 UTC
I turn it into an easy hack.
I can reproduce this problem also on 5.4 master branch. The tab page which has this preview window is now called "Customize".

We have separate code for Writer and Impress, but they are duplicate of each other. Both should have the same problem and should be fixed on the same way.

You can find the code in these methods:
Impress: SvxNumberingPreview::Paint()
Writer: NumberingPreview::Paint()
Comment 14 Vidhey PV 2017-01-06 11:15:48 UTC
On click level "1-10",the preview window is not showing the modified values(except for the level-1).Is it expected to show all the modified values from all the levels???
Comment 15 Tamás Zolnai 2017-01-06 11:47:17 UTC
(In reply to Vidhey PV from comment #14)
> On click level "1-10",the preview window is not showing the modified
> values(except for the level-1).Is it expected to show all the modified
> values from all the levels???

If I understand the question right, then yes. The preview window should show bullets for all levels when level 1-10 is selected (now it shows only for the first level). As I see it works well when the numbering type is number or character and the problem only comes up with bullets.
Comment 16 Tamás Zolnai 2017-01-06 12:32:21 UTC
(In reply to Vidhey PV from comment #14)
> On click level "1-10",the preview window is not showing the modified
> values(except for the level-1).Is it expected to show all the modified
> values from all the levels???

On more thing. The main issue here is that bullet symbols are not drawn in some case (see screenshot). If there are some other issues (e.g. wrong indentation), we can open new bugs for them.
Comment 17 Commit Notification 2017-01-13 11:06:35 UTC
pv2k committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7a275521a5383f24d9a0c1aea7b61f1b64829190

tdf#46552 fixing preview for bullets/numbering configuration

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.