tdf#46552 fixing preview for bullets/numbering configuration

Change-Id: I959169428d4ed0498a2b78fc7a6ae0815e780648